# S56_Projet

./: .gitignore  README.md
Idée/: idée.txt  plan.txt
Rapport/: main.tex
Rapport/.bin/: main.aux  main.bcf  main.fdb_latexmk  main.fls  main.out  main.run.xml  main.toc
code/: CMakeLists.txt  README.md  commande.txt  compile.sh
code/client/: ClientEventHandler.cc  ClientEventHandler.h  ClientGame.cc  ClientGame.h  ClientNetworkHandler.cc  ClientNetworkHandler.h  ClientScreen.h  EndEntity.cc  EndEntity.h  EndScene.cc  EndScene.h  GameEntity.cc  GameEntity.h  GameScene.cc  GameScene.h  LobbyEntity.cc  LobbyEntity.h  LobbyListEntity.cc  LobbyListEntity.h  LobbyListScene.cc  LobbyListScene.h  LobbyScene.cc  LobbyScene.h  Renderer.cc  Renderer.h  SceneRequest.h  Structures.h  WelcomeEntity.cc  WelcomeEntity.h  WelcomeScene.cc  WelcomeScene.h  main.cc
code/common/: Constants.h  Protocol.h  Types.h
code/server/: Board.cc  Board.h  BotController.cc  BotController.h  BotManager.cc  BotManager.h  Case.cc  Case.h  ClientInfo.h  Controller.cc  Controller.h  Game.cc  Game.h  GameNetworkServer.cc  GameNetworkServer.h  GraphTraceMap.cc  GraphTraceMap.h  InputQueue.h  Lobby.cc  Lobby.h  PacketContext.h  Plateau.cc  Plateau.h  Player.cc  Player.h  Room.cc  Room.h  ServerNetwork.cc  ServerNetwork.h  main.cc
test/Prototype_FMSL/: CMakeLists.txt
test/Prototype_FMSL/client/: main.cc
test/Prototype_FMSL/server/: main.cc
test/Prototype_GF/: CMakeLists.txt
test/Prototype_GF/client/: main.cc
test/Prototype_GF/common/: Types.h
test/Prototype_GF/server/: main.cc
